fix alignment in table in Deck

--- a/react-frontend/assets/css/style.styl
+++ b/react-frontend/assets/css/style.styl
@@ -425,6 +425,7 @@ td.prob
     border-top: 1px solid var(--border-secondary)
     border-bottom: 1px solid var(--border-secondary)
     border-collapse: collapse
+    text-align: center
   td.proxy-selector
     width: 1%
   td.quantity
@@ -435,7 +436,6 @@ td.prob
     font-size: 1.1em
     background: rgba(0, 0, 170, 0.05);
     border-right: 1px solid var(--border-secondary)
-    text-align: center
   td.name
     text-align: left
   td.proxy-set
@@ -449,7 +449,6 @@ td.prob
   td.capacity
     width: 40px
   td.disciplines td
-    text-align: center
     min-width: 27px
     @media (max-width: 576px)
       min-width: 23px
@@ -556,7 +555,6 @@ td.prob
   td
     height: 32px
   td.disciplines td
-    text-align: center
     min-width: 27px
     @media (max-width: 576px)
       min-width: 23px
